force-app/main/default/objects/deductions__c/deductions__c.object-meta.xml
<CustomObject>
    <label>Deduction</label>
    <nameField>
        <label>Deduction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deductions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>