force-app/main/default/objects/deductions__c/fields/Assessment_Year__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Year__c</fullName>
    <label>Assessment Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>