force-app/main/default/objects/deductions__c/fields/Deduction_amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_amount__c</fullName>
    <label>Deduction amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>