force-app/main/default/objects/deductions__c/fields/Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type__c</fullName>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TDS on Salary</fullName>
            </value>
            <value>
                <fullName>TDS on Contractor Payment</fullName>
            </value>
            <value>
                <fullName>TDS on Rent</fullName>
            </value>
            <value>
                <fullName>TDS on Professional Fees</fullName>
            </value>
            <value>
                <fullName>TDS on Interest (194A)</fullName>
            </value>
            <value>
                <fullName>TDS on Commission/Brokerage</fullName>
            </value>
            <value>
                <fullName>TDS on Purchase of Property</fullName>
            </value>
            <value>
                <fullName>TDS on Dividend (194)</fullName>
            </value>
            <value>
                <fullName>TDS on Royalty/FTS (194J)</fullName>
            </value>
            <value>
                <fullName>TDS on Technical Services</fullName>
            </value>
            <value>
                <fullName>TDS on Foreign Remittance (195)</fullName>
            </value>
            <value>
                <fullName>GST Deduction at Source (TDS)</fullName>
            </value>
            <value>
                <fullName>Provident Fund (PF) Deduction</fullName>
            </value>
            <value>
                <fullName>Professional Tax</fullName>
            </value>
            <value>
                <fullName>Employee State Insurance (ESI)</fullName>
            </value>
            <value>
                <fullName>Advance Tax</fullName>
            </value>
            <value>
                <fullName>Self-Assessment Tax</fullName>
            </value>
            <value>
                <fullName>Equalization Levy</fullName>
            </value>
            <value>
                <fullName>Custom Duty Deduction</fullName>
            </value>
            <value>
                <fullName>Income Tax Deducted</fullName>
            </value>
            <value>
                <fullName>Surcharge &amp; Cess</fullName>
            </value>
            <value>
                <fullName>Other Statutory Deduction</fullName>
            </value>
            <value>
                <fullName>Non-Tax Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>