force-app/main/default/objects/deductions__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>PPF</fullName>
            </value>
            <value>
                <fullName>ELSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>