force-app/main/default/objects/deductions__c/fields/Proof_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Proof_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof Submitted</label>
    <type>Checkbox</type>
</CustomField>