force-app/main/default/objects/deductions__c/fields/Verification_status__c.field-meta.xml
<CustomField>
    <fullName>Verification_status__c</fullName>
    <label>Verification status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>