force-app/main/default/objects/deductions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Year__c</columns>
    <columns>Deduction_Type__c</columns>
    <columns>Deduction_amount__c</columns>
    <columns>Investment_Type__c</columns>
    <columns>Proof_Submitted__c</columns>
    <columns>Verification_status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>